syntax = "proto3";

package api;

service Calendar {
    rpc Create (EventDto) returns (CreateResponseDto);
    rpc Update (EventDto) returns (Empty);
    rpc Remove (EventDto) returns (Empty);
    rpc GetForDate (DateRequest) returns (EventsResponse);
    rpc GetForWeek (Empty) returns (EventsResponse);
    rpc GetForMonth (Empty) returns (EventsResponse);
}

message EventDto {
    int32 id = 1;
    string title = 2;
    string description = 3;
    int64 time = 4;
}

message CreateResponseDto {
    int32 id = 1;
}

message EventsResponse {
    repeated EventDto events = 1;
}

message Empty {
}

message DateRequest {
    int64 day = 1;
}